@@ -22,8 +22,7 @@
 - write *-filter-status.txt's for the kseg and cabri filters.
 
 - Three new transformations: projection on a line, orthogonally and
-  according to a given direction, and a similitude ( homothecy +
-  rotation ).
+  according to a given direction.
 
 - When selecting an argument of a certain type, show something like
    "Select a vector", so that the user is not confused, looking for an
