@@ -1,5 +1,7 @@
 2004-05-28  Dominique Devriese  <devriese@kde.org>
 
+	* Add a Similitude transformation.
+
 	* Add a VectorEqualityTestType.
 
 2004-05-27  Dominique Devriese  <devriese@kde.org>
